--- a/Appitude/NotesViewController.xib
+++ b/Appitude/NotesViewController.xib
@@ -40,7 +40,7 @@
 			</object>
 			<object class="IBUIView" id="450264906">
 				<reference key="NSNextResponder"/>
-				<int key="NSvFlags">292</int>
+				<int key="NSvFlags">278</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<object class="IBUIImageView" id="808614625">
@@ -48,6 +48,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{500, 690}</string>
 						<reference key="NSSuperview" ref="450264906"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="744706061"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -61,6 +62,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{5, 0}, {100, 20}}</string>
 						<reference key="NSSuperview" ref="450264906"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="522955569"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">2</int>
@@ -73,6 +75,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{5, 45}, {490, 642}}</string>
 						<reference key="NSSuperview" ref="450264906"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="636052200"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="763733586">
 							<int key="NSColorSpace">3</int>
@@ -94,6 +97,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 7}, {100, 37}}</string>
 						<reference key="NSSuperview" ref="450264906"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="804765627"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -125,7 +129,7 @@
 					</object>
 					<object class="IBUIView" id="636052200">
 						<reference key="NSNextResponder" ref="450264906"/>
-						<int key="NSvFlags">-2147483356</int>
+						<int key="NSvFlags">292</int>
 						<object class="NSMutableArray" key="NSSubviews">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="IBUIImageView" id="129398807">
@@ -133,6 +137,7 @@
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{20, 6}, {344, 195}}</string>
 								<reference key="NSSuperview" ref="636052200"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="252597946"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -144,8 +149,9 @@
 							<object class="IBUITextView" id="252597946">
 								<reference key="NSNextResponder" ref="636052200"/>
 								<int key="NSvFlags">290</int>
-								<string key="NSFrame">{{26, 15}, {328, 165}}</string>
+								<string key="NSFrame">{{29, 15}, {320, 174}}</string>
 								<reference key="NSSuperview" ref="636052200"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="320174828"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -161,7 +167,9 @@
 									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								</object>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">1</int>
+									<string key="name">Helvetica</string>
+									<string key="family">Helvetica</string>
+									<int key="traits">0</int>
 									<double key="pointSize">17</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
@@ -173,9 +181,9 @@
 							<object class="IBUIButton" id="320174828">
 								<reference key="NSNextResponder" ref="636052200"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{277, 321}, {72, 37}}</string>
+								<string key="NSFrame">{{285, 214}, {72, 37}}</string>
 								<reference key="NSSuperview" ref="636052200"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -204,8 +212,9 @@
 								</object>
 							</object>
 						</object>
-						<string key="NSFrame">{{138, 103}, {384, 502}}</string>
+						<string key="NSFrame">{{96, 103}, {384, 502}}</string>
 						<reference key="NSSuperview" ref="450264906"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="129398807"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -214,6 +223,7 @@
 								<int key="NSID">2</int>
 							</object>
 						</object>
+						<bool key="IBUIAutoresizesSubviews">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
 					<object class="IBUIButton" id="16385185">
@@ -221,6 +231,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{305, 8}, {73, 37}}</string>
 						<reference key="NSSuperview" ref="450264906"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="811687648"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -236,7 +247,7 @@
 							<bytes key="NSRGB">MC4zODgyMzUzMzA2IDAuMzg4MjM1MzMwNiAwLjM4ODIzNTMzMDYAA</bytes>
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="456359548"/>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="499046000">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="875412925">
 							<string key="name">Helvetica</string>
 							<string key="family">Helvetica</string>
 							<int key="traits">0</int>
@@ -253,6 +264,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{204, 8}, {72, 37}}</string>
 						<reference key="NSSuperview" ref="450264906"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="16385185"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -268,7 +280,7 @@
 							<bytes key="NSRGB">MC40Nzg0MzE0MDM2IDAuNDc4NDMxNDAzNiAwLjQ3ODQzMTQwMzYAA</bytes>
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="456359548"/>
-						<reference key="IBUIFontDescription" ref="499046000"/>
+						<reference key="IBUIFontDescription" ref="875412925"/>
 						<reference key="IBUIFont" ref="348156116"/>
 					</object>
 					<object class="IBUIButton" id="811687648">
@@ -276,6 +288,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{414, 12}, {27, 21}}</string>
 						<reference key="NSSuperview" ref="450264906"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="278782305"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -306,10 +319,10 @@
 					<object class="IBUIImageView" id="278782305">
 						<reference key="NSNextResponder" ref="450264906"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{204, 42}, {72, 3}}</string>
+						<string key="NSFrame">{{213, 42}, {63, 3}}</string>
 						<reference key="NSSuperview" ref="450264906"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="505959436"/>
-						<int key="IBUITag">21</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -320,6 +333,7 @@
 				</object>
 				<string key="NSFrameSize">{500, 690}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="808614625"/>
 				<reference key="IBUIBackgroundColor" ref="763733586"/>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -330,11 +344,11 @@
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">imgLine</string>
+						<string key="label">topViewDiscussion</string>
 						<reference key="source" ref="841351856"/>
-						<reference key="destination" ref="278782305"/>
+						<reference key="destination" ref="744706061"/>
 					</object>
-					<int key="connectionID">31</int>
+					<int key="connectionID">20</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -346,19 +360,19 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">imgLine</string>
+						<reference key="source" ref="841351856"/>
+						<reference key="destination" ref="278782305"/>
+					</object>
+					<int key="connectionID">31</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">txtNewField</string>
 						<reference key="source" ref="841351856"/>
 						<reference key="destination" ref="252597946"/>
 					</object>
 					<int key="connectionID">39</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">topViewDiscussion</string>
-						<reference key="source" ref="841351856"/>
-						<reference key="destination" ref="744706061"/>
-					</object>
-					<int key="connectionID">20</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -402,6 +416,14 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">AddNoteView</string>
+						<reference key="source" ref="841351856"/>
+						<reference key="destination" ref="636052200"/>
+					</object>
+					<int key="connectionID">51</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">dataSource</string>
 						<reference key="source" ref="505959436"/>
 						<reference key="destination" ref="841351856"/>
@@ -427,21 +449,21 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">btnHeaderClick:</string>
+						<string key="label">everyoneButon_Clicked</string>
 						<reference key="source" ref="16385185"/>
 						<reference key="destination" ref="841351856"/>
 						<int key="IBEventType">7</int>
 					</object>
-					<int key="connectionID">52</int>
+					<int key="connectionID">32</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">btnHeaderClick:</string>
+						<string key="label">myNoteButon_Clicked</string>
 						<reference key="source" ref="804765627"/>
 						<reference key="destination" ref="841351856"/>
 						<int key="IBEventType">7</int>
 					</object>
-					<int key="connectionID">51</int>
+					<int key="connectionID">33</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -495,8 +517,8 @@
 							<reference ref="522955569"/>
 							<reference ref="808614625"/>
 							<reference ref="278782305"/>
-							<reference ref="16385185"/>
 							<reference ref="804765627"/>
+							<reference ref="16385185"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -623,9 +645,169 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">52</int>
+			<int key="maxID">51</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">NotesViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>addNoteButon_Clicked</string>
+							<string>everyoneButon_Clicked</string>
+							<string>myNoteButon_Clicked</string>
+							<string>sendNoteButon_Clicked</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>addNoteButon_Clicked</string>
+							<string>everyoneButon_Clicked</string>
+							<string>myNoteButon_Clicked</string>
+							<string>sendNoteButon_Clicked</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBActionInfo">
+								<string key="name">addNoteButon_Clicked</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">everyoneButon_Clicked</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">myNoteButon_Clicked</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">sendNoteButon_Clicked</string>
+								<string key="candidateClassName">id</string>
+							</object>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>AddNoteView</string>
+							<string>BtnAddNote</string>
+							<string>BtnEveryone</string>
+							<string>BtnMyNote</string>
+							<string>discussionBtn</string>
+							<string>discussionView</string>
+							<string>imgLine</string>
+							<string>lblNote</string>
+							<string>otherView</string>
+							<string>tblView</string>
+							<string>topViewDiscussion</string>
+							<string>txtNewField</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>UIView</string>
+							<string>UIButton</string>
+							<string>UIButton</string>
+							<string>UIButton</string>
+							<string>UIButton</string>
+							<string>UIView</string>
+							<string>UIImageView</string>
+							<string>UILabel</string>
+							<string>UIView</string>
+							<string>UITableView</string>
+							<string>UIView</string>
+							<string>UITextView</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>AddNoteView</string>
+							<string>BtnAddNote</string>
+							<string>BtnEveryone</string>
+							<string>BtnMyNote</string>
+							<string>discussionBtn</string>
+							<string>discussionView</string>
+							<string>imgLine</string>
+							<string>lblNote</string>
+							<string>otherView</string>
+							<string>tblView</string>
+							<string>topViewDiscussion</string>
+							<string>txtNewField</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">AddNoteView</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">BtnAddNote</string>
+								<string key="candidateClassName">UIButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">BtnEveryone</string>
+								<string key="candidateClassName">UIButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">BtnMyNote</string>
+								<string key="candidateClassName">UIButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">discussionBtn</string>
+								<string key="candidateClassName">UIButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">discussionView</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">imgLine</string>
+								<string key="candidateClassName">UIImageView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">lblNote</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">otherView</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">tblView</string>
+								<string key="candidateClassName">UITableView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">topViewDiscussion</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">txtNewField</string>
+								<string key="candidateClassName">UITextView</string>
+							</object>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/NotesViewController.h</string>
+					</object>
+				</object>
+			</object>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
